fixed spacing

--- a/style.css
+++ b/style.css
@@ -81,8 +81,7 @@ a.btn:hover {
   background-color: rgb(255, 182, 37);
 }
 
-iner is needed to position the front and back side */
-.flip-card-inner {
+iner is needed to position the front and back side */ .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -92,6 +91,7 @@ iner is needed to position the front and back side */
 }
 
 @media (max-width: 960px) {
+
   /* For a screen < 960px, this CSS will be read */
   .container {
     width: 700px;
@@ -99,6 +99,7 @@ iner is needed to position the front and back side */
 }
 
 @media (max-width: 720px) {
+
   /* For a screen < 720px, this CSS will be read */
   .container {
     width: 500px;
@@ -106,6 +107,7 @@ iner is needed to position the front and back side */
 }
 
 @media (max-width: 540px) {
+
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
